# docs/swagger.json
@@ -302,13 +302,13 @@
         "model.User": {
             "type": "object",
             "properties": {
+                "agentId": {
+                    "type": "integer"
+                },
                 "center": {
                     "$ref": "#/definitions/model.Center"
                 },
                 "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
                     "type": "string"
                 },
                 "email": {
