# model/model.go
@@ -4,6 +4,7 @@ import (
 	"time"
 
 	"github.com/google/uuid"
+	"gorm.io/gorm"
 )
 
 type StatusResponse struct {
@@ -26,8 +27,8 @@ type FormFilter struct {
 }
 
 type Model struct {
-	ID        uuid.UUID `gorm:"primaryKey;default:uuid_generate_v4()" json:"id"`
-	CreatedAt time.Time `json:"createdAt"`
-	UpdatedAt time.Time `json:"updatedAt"`
-	DeletedAt time.Time `gorm:"index" json:"deletedAt"`
+	ID        uuid.UUID      `gorm:"primaryKey;default:uuid_generate_v4()" json:"id"`
+	CreatedAt time.Time      `json:"createdAt"`
+	UpdatedAt time.Time      `json:"updatedAt"`
+	DeletedAt gorm.DeletedAt `gorm:"index" json:"-" swaggerignore:"true"`
 }
